# daiv-ai

./: .dockerignore  .env.example  .gitignore  BUILD_SPEC.md  CLAUDE.md  Dockerfile  FINAL_BUILD.md  LICENSE  Makefile  PHASE2_MASTER.md  README.md  SYSTEM_DESIGN.md  TONIGHT_SETUP_GUIDE.md  config.yaml  docker-compose.yml  pyproject.toml
engine/: pyproject.toml
engine/src/daivai_engine/: __init__.py  constants.py  exceptions.py
engine/src/daivai_engine/compute/: __init__.py  argala.py  ashtakavarga.py  avakhada.py  bhava_bala.py  bhava_chalit.py  chart.py  daily.py  dasha.py  dasha_extra.py  datetime_utils.py  divisional.py  dosha.py  dosha_extended.py  full_analysis.py  geo.py  hindu_calendar.py  house_comparison.py  jaimini.py  kalachakra_dasha.py  kp.py  kp_ruling.py  matching.py  muhurta.py  muhurta_advanced.py  namkarana.py  narayana_dasha.py  numerology.py  panchang.py  prashna.py  saham.py  special_lagnas.py  strength.py  sudarshan.py  transit.py  upagraha.py  varshphal.py  vastu.py  verify.py  yoga.py  (+2 more)
engine/src/daivai_engine/knowledge/: aspects.yaml  avakhada_data.yaml  ayanamsha_reference.yaml  computation_sources.yaml  gemstone_logic.yaml  house_significations.yaml  loader.py  provenance.py
engine/src/daivai_engine/models/: __init__.py  analysis.py  avakhada.py  bhava_chalit.py  chart.py  divisional.py  dosha.py  matching.py  pattern.py  provenance.py
engine/src/daivai_engine/scriptures/: query.py
engine/src/jyotish_engine/: __init__.py  constants.py  exceptions.py
engine/src/jyotish_engine/compute/: __init__.py  ashtakavarga.py  bhava_chalit.py  chart.py  daily.py  dasha.py  dasha_extra.py  datetime_utils.py  divisional.py  dosha.py  geo.py  jaimini.py  kp.py  matching.py  muhurta.py  panchang.py  strength.py  transit.py  upagraha.py  yoga.py  yoga_other.py
engine/src/jyotish_engine/knowledge/: __init__.py  dignity.yaml  loader.py  lordship_rules.yaml  mantras.yaml  nakshatra_data.yaml
engine/src/jyotish_engine/models/: __init__.py  ashtakavarga.py  bhava_chalit.py  chart.py  daily.py  dasha.py  dasha_extra.py  dosha.py  gemstone.py  jaimini.py  kp.py  muhurta.py  panchang.py  scripture.py  strength.py  transit.py  upagraha.py  yoga.py
products/: pyproject.toml
products/src/daivai_products/: registry.py
products/src/jyotish_products/: __init__.py  registry.py
(+344 files in other folders)
