[project]
name = "jyotish-engine"
version = "1.0.0"
description = "Pure Vedic astrology computation — Swiss Ephemeris + YAML rules. Zero AI."
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{name = "Manish Chaurasia"}]
dependencies = [
    "pyswisseph>=2.10.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pytz>=2024.1",
    "geopy>=2.4.0",
    "timezonefinder>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jyotish_engine"]
