[project]
name = "jyotish-products"
version = "1.0.0"
description = "AI interpretation, 7 product plugins, and storage for Vedic astrology."
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Manish Chaurasia"}]
dependencies = [
    "jyotish-engine",
    "jinja2>=3.0",
]

[project.optional-dependencies]
groq = ["groq>=0.9.0"]
ollama = ["ollama>=0.4.0"]
claude = ["anthropic>=0.39.0"]
openai = ["openai>=1.50.0"]
pdf = ["reportlab>=4.0", "matplotlib>=3.8"]
all = ["jyotish-products[groq,ollama,claude,openai,pdf]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jyotish_products"]
